# pico-project

./: .gitmodules  CMakeLists.txt  README.md
pico-assignment/: assignment-1.1.py  assignment-1.2_update to record all text.py  assignment-1.2_update_rotary.py  assignment-1.3.py  assignment-2.1.py  assignment-2.2.py
